add --enable-preview used by sejda-io